Added updated build.xml